--- a/about.html
+++ b/about.html
@@ -204,34 +204,34 @@
 			<section id="Experience">
 				<h2><span class="is-emoji">&#x1f4bc;</span>Experience</h2>
 				<h3>Academic &rang; Faculty</h3>
-				<ul>
-					<li class="is-highlighted"><span class="is-date">(Since 2023, August)</span>. <u>Assistant Professor.</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
+				<ol reversed>
+					<li class="is-highlighted"><span class="is-date">(Since 2023, August)</span>. <u>Assistant Professor <span class="is-translation is-comment">[Dutch: <i>Universitair Docent</i>]</span>.</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
 						<blockquote class="is-details is-highlighted"><span class="is-date">(Since 2023, August)</span>. <u>Programme Coordinator Master&rsquo;s Cultural Data &amp; AI (MA Media Studies).</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/shared-content/programmas/en/masters/cultural-data-ai/cultural-data-and-artificial-intelligence.html" class="ahref-url">https://www.uva.nl/shared-content/programmas/en/masters/cultural-data-ai/cultural-data-and-artificial-intelligence.html</a>.</blockquote>
 						<blockquote class="is-details"><span class="is-date">(Since 2023, August)</span>. <u>Curriculum Development Bachelor&rsquo;s Global Arts, Culture and Politics: The Human and Artificial Intelligence (BA Cultural Studies).</u> Department of Cultural Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/shared-content/programmas/en/bachelors/global-arts-culture-and-politics/global-arts-culture-and-politics.html" class="ahref-url">https://www.uva.nl/shared-content/programmas/en/bachelors/global-arts-culture-and-politics/global-arts-culture-and-politics.html</a>.</blockquote>
-				</ul>
+				</ol>
 				<h3>Academic &rang; Research</h3>
-				<ul>
-					<li class="y2023"><span class="is-date">(2022-08 to 2023-07)</span>. <u>Researcher (Postdoctoral).</u> Focus Area &lsquo;Governing the Digital Society&rsquo;; Department of Media and Culture Studies, Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
+				<ol reversed>
+					<li class="y2023"><span class="is-date">(2022-08 to 2023-07)</span>. <u>Researcher (Postdoctoral) <span class="is-translation is-comment">[Dutch: <i>Onderzoeker</i>]</span>.</u> Focus Area &lsquo;Governing the Digital Society&rsquo;; Department of Media and Culture Studies, Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
 					<li class="y2023"><span class="is-date">(2016-07 to 2023-07)</span>. <u>Researcher (Doctoral/Postdoctoral) <span class="is-translation is-comment">[German: <i>Wissenschaftlicher Mitarbeiter</i>]</span>.</u> DFG Collaborative Research Centre &lsquo;Media of Cooperation&rsquo; <span class="is-translation is-comment">[German: <i>DFG-Sonderforschungsbereich 1187 &bdquo;Medien der Kooperation&rdquo;</i>]</span>, University of Siegen, Germany. <a rel="external" target="_blank" href="https://www.mediacoop.uni-siegen.de/" class="ahref-url">https://www.mediacoop.uni-siegen.de/</a>; <a rel="external" target="_blank" href="https://www.uni-siegen.de/" class="ahref-url">https://www.uni-siegen.de/</a>.</li>
-					<li class="y2022"><span class="is-date">(2019-04 to 2022-07)</span>. <u>Researcher (PhD Candidate) <span class="is-translation is-comment">[Dutch: <i>Promovendus</i>]</span>.</u> Department of Media and Culture Studies, Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
+					<li class="y2022"><span class="is-date">(2019-04 to 2022-07)</span>. <u>Researcher (PhD Candidate) <span class="is-translation is-comment">[Dutch: <i>Onderzoeker (Promovendus)</i>]</span>.</u> Department of Media and Culture Studies, Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
 					<li class="y2018"><span class="is-date">(2016-08 to 2018-07)</span>. <u>Research Associate.</u> Digital Methods Initiative (Department of Media Studies, Fac. of Humanities), University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.digitalmethods.net/" class="ahref-url">https://www.digitalmethods.net/</a>; <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
-					<li class="y2016"><span class="is-date">(2016-02 to 2016-07)</span>. <u>Researcher.</u> ERC Consolidator Project &lsquo;Digital Crossings in Europe: Gender, Diaspora and Belonging&rsquo; (CONNECTINGEUROPE), Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://connectingeuropeproject.eu/" class="ahref-url">https://connectingeuropeproject.eu/</a>; <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
+					<li class="y2016"><span class="is-date">(2016-02 to 2016-07)</span>. <u>Researcher <span class="is-translation is-comment">[Dutch: <i>Onderzoeker</i>]</span>.</u> ERC Consolidator Project &lsquo;Digital Crossings in Europe: Gender, Diaspora and Belonging&rsquo; (CONNECTINGEUROPE), Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://connectingeuropeproject.eu/" class="ahref-url">https://connectingeuropeproject.eu/</a>; <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
 					<li class="y2015"><span class="is-date">(2014-09 to 2015-05)</span>. <u>Research Assistant <span class="is-translation is-comment">[Dutch: <i>Student-assistent</i>]</span>.</u> Dr. B. Rieder, Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
-				</ul>
+				</ol>
 				<h3>Academic &rang; Teaching</h3>
-				<ul>
+				<ol reversed>
 					<li class="y2023"><span class="is-date">(2022-08 to 2023-07)</span>. <u>Lecturer in New Media and Digital Culture <span class="is-translation is-comment">[Dutch: <i>Docent Nieuwe media en digitale cultuur</i>]</span>.</u> Department of Media and Culture Studies, Fac. of Humanities, Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
 					<li class="y2018"><span class="is-date">(2016-08 to 2018-07)</span>. <u>Lecturer in New Media and Digital Culture.</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
 					<li class="y2016"><span class="is-date">(2016-02 to 2016-07)</span>. <u>Lecturer in Digital Methods <span class="is-translation is-comment">[Dutch: <i>Docent Digitale methoden</i>]</span>.</u> Utrecht Data School (Department of Media and Culture Studies, Fac. of Humanities), Utrecht University, Netherlands. <a rel="external" target="_blank" href="https://www.dataschool/" class="ahref-url">https://www.dataschool.nl/</a>; <a rel="external" target="_blank" href="https://www.uu.nl/" class="ahref-url">https://www.uu.nl/</a>.</li>
 					<li class="y2016"><span class="is-date">(2015-09 to 2016-01)</span>. <u>Lecturer in New Media and Digital Culture <span class="is-translation is-comment">[Dutch: <i>Docent Nieuwe media en digitale cultuur</i>]</span>.</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
 					<li class="y2015"><span class="is-date">(2014-02 to 2015-08)</span>. <u>Teaching Assistant in Media and Culture <span class="is-translation is-comment">[Dutch: <i>Student-assistent Media en cultuur</i>]</span>.</u> Department of Media Studies, Fac. of Humanities, University of Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.uva.nl/" class="ahref-url">https://www.uva.nl/</a>.</li>
-				</ul>
+				</ol>
 				<h3>Other &rang; Design</h3>
-				<ul>
+				<ol reversed>
 					<li><span class="is-date">(Since 2012, July)</span>. <u>Independent Graphic Designer.</u> fernandovandervlist.nl, Amsterdam, Netherlands. <a rel="author" href="https://www.fernandovandervlist.nl/" class="ahref-url">https://www.fernandovandervlist.nl/</a>.</li>
 					<li class="y2012"><span class="is-date">(2011-11 to 2012-05)</span>. <u>Assistant Graphic Designer.</u> Mind Design, Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.minddesign.info/" class="ahref-url">https://www.minddesign.info/</a>.</li>
 					<li class="y2011"><span class="is-date">(2011-08 to 2011-10)</span>. <u>Assistant Graphic Designer.</u> The World as Flatland, Amsterdam, Netherlands. <a rel="external" target="_blank" href="https://www.theworldasflatland.net/" class="ahref-url">https://www.theworldasflatland.net/</a>.</li>
-				</ul>
+				</ol>
 			<hr class="dashed" />
 			</section>
 			<section id="Education">
@@ -614,7 +614,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.researchgate.net/profile/Fernando_Van_Der_Vlist" class="ahref-text">ResearchGate</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.zotero.org/fvandervlist" class="ahref-text">Zotero</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/contact.html" class="path ahref-text">Contact</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-16</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -622,7 +622,7 @@
 					<td class="td-icon"><span class="is-emoji">&#x1f3de;</span></td>
 					<td class="td-link"><a rel="internal" href="/gallery.html" class="path ahref-text">gallery.html</a></td>
 					<td class="td-description"><a rel="internal" href="/gallery.html" class="path ahref-text">Gallery</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-16</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -671,24 +671,21 @@
 			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme (default: match browser)" /> Light</span>
 			</span>
 			&boxv;
 			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (> 5 years ago)" /> Archived</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (from > 5 years ago (default: shown))" checked /> Archived</span>
 				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleIsMarked" title="Toggle in-text marks (if applicable)" /> Marked</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text original translations (if applicable)" /> Translations</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji" /> Emoji</span>
-				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji (default: shown)" checked /> Emoji</span>
 			</span>
 			&boxv;
 			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
-			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 15, 2024</span>
+			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 16, 2024</span>
 		</p>
 	</footer>
 
