--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
 				&boxv;
 				<span class="byline-field">Versions:</span>
 				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553;</span><a rel="external" target="_blank" href="https://github.com/fvandervlist/fvandervlist.github.io/commits/main" class="ahref-text">Commits <span class="path-expands">[github.com]</span></a></span>
-				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/changes/https://www.fernandovandervlist.nl/" class="ahref-text">Changes <span class="path-expands">[web.archive.org]</span></a></span>
+				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553;</span><a rel="external" target="_blank" href="https://bitbucket.org/fvandervlist/fernandovandervlist.nl/commits/branch/master" class="ahref-text">Commits <span class="path-expands">[bitbucket.org]</span></a></span>
 				<span class="shortcut-link is-version">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/*/https://www.fernandovandervlist.nl/" class="ahref-text">Archive <span class="path-expands">[web.archive.org]</span></a></span>
+				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/changes/https://www.fernandovandervlist.nl/" class="ahref-text">Changes <span class="path-expands">[web.archive.org]</span></a></span>
 			</p>
 			<hr class="solid" />
 		</section>
@@ -790,7 +791,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ORCID ID: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">0000-0003-1401-0325</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Staff Profile: <a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">uva.nl/en/profile/f.n.vandervlist/</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/about.html" class="path ahref-text">About</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-16</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -808,7 +809,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.researchgate.net/profile/Fernando_Van_Der_Vlist" class="ahref-text">ResearchGate</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.zotero.org/fvandervlist" class="ahref-text">Zotero</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/contact.html" class="path ahref-text">Contact</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-16</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -816,7 +817,7 @@
 					<td class="td-icon"><span class="is-emoji">&#x1f3de;</span></td>
 					<td class="td-link"><a rel="internal" href="/gallery.html" class="path ahref-text">gallery.html</a></td>
 					<td class="td-description"><a rel="internal" href="/gallery.html" class="path ahref-text">Gallery</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-16</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -865,20 +866,17 @@
 			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme (default: match browser)" /> Light</span>
 			</span>
 			&boxv;
 			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (> 5 years ago)" /> Archived</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (from > 5 years ago (default: shown))" checked /> Archived</span>
 				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleIsMarked" title="Toggle in-text marks (if applicable)" /> Marked</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text original translations (if applicable)" /> Translations</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji" /> Emoji</span>
-				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji (default: shown)" checked /> Emoji</span>
 			</span>
 		</p>
 	</footer>
