--- a/research/super-appification.html
+++ b/research/super-appification.html
@@ -434,11 +434,11 @@
 			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (from > 5 years ago (default: shown))" checked /> Archived</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle show/hide upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle show/hide archived items (from > 5 years ago) (default: shown)" checked /> Archived</span>
 				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji (default: shown)" checked /> Emoji</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle show/hide in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle show/hide emoji (default: shown)" checked /> Emoji</span>
 			</span>
 			&boxv;
 			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
