--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<section class="summary">
 			<h4 class="is-author">Fernando <b>van der Vlist</b></h4>
 			<blockquote class="is-highlighted"><span class="is-emoji blockquote-quo">&rdquo;</span><a rel="internal" href="/about.html#Profile" class="path anchor ahref-text">
-				is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam (UvA), Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.
+				is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.
 			</a></blockquote>
 			<section class="summary-expands-hover">
 				<small class="is-comment note-expands"><b><span class="is-emoji">&#x2139;</span>Note:</b> Please hover to display additional information.</small>
@@ -872,11 +872,11 @@
 			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
-				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle archived items (from > 5 years ago (default: shown))" checked /> Archived</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle show/hide upcoming items (if applicable) (default: shown)" checked /> Upcoming</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsArchived" title="Toggle show/hide archived items (from > 5 years ago) (default: shown)" checked /> Archived</span>
 				&boxv;
-				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
-				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle in-text emoji (default: shown)" checked /> Emoji</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsTranslation" title="Toggle show/hide in-text contextual translations (if applicable) (default: hidden)" unchecked /> Translations</span>
+				<span class="legend-value"><input type="checkbox" id="toggleIsEmoji" title="Toggle show/hide emoji (default: shown)" checked /> Emoji</span>
 			</span>
 		</p>
 	</footer>
