--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<section class="summary">
 			<h4 class="is-author">Fernando <b>van der Vlist</b></h4>
 			<blockquote class="is-highlighted"><span class="is-emoji blockquote-quo">&rdquo;</span><a rel="internal" href="/about.html#Profile" class="path anchor ahref-text">
-				is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.
+				<span class="blockquote-expands">is a scholar, graphic designer, and educator specialising in digital media and technology. He </span>is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam (UvA), Netherlands.<span class="blockquote-expands"> His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society.</span>
 			</a></blockquote>
 			<section class="summary-expands-hover">
 				<small class="is-comment note-expands"><b><span class="is-emoji">&#x2139;</span>Note:</b> Please hover to display additional information.</small>
