--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 				<span class="shortcut-link is-reference">&rarrhk; <span class="is-emoji">&#x1f4eb;</span><a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">Feed <span class="path-expands">[RSS]</a></span>
 				&boxv;
 				<span class="byline-field">Versions:</span>
-				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553;</span><a rel="external" target="_blank" href="https://github.com/fvandervlist/fvandervlist.github.io/commits/main" class="ahref-text">Commits <span class="path-expands">[github.com]</span></a></span>
+				<span class="shortcut-link is-version">&larrhk; <span class="is-emoji">&#x1f553;</span><a rel="external" target="_blank" href="https://github.com/fvandervlist/fvandervlist.github.io/commits/main" class="ahref-text">Commits <span class="path-expands">[github.com]</span></a></span>
 				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553;</span><a rel="external" target="_blank" href="https://bitbucket.org/fvandervlist/fernandovandervlist.nl/commits/branch/master" class="ahref-text">Commits <span class="path-expands">[bitbucket.org]</span></a></span>
-				<span class="shortcut-link is-version">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/*/https://www.fernandovandervlist.nl/" class="ahref-text">Archive <span class="path-expands">[web.archive.org]</span></a></span>
 				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/changes/https://www.fernandovandervlist.nl/" class="ahref-text">Changes <span class="path-expands">[web.archive.org]</span></a></span>
+				<span class="shortcut-link is-version is-hidden">&larrhk; <span class="is-emoji">&#x1f553; &#x1f3db;&#xfe0f;</span><a rel="external" target="_blank" href="https://web.archive.org/web/*/https://www.fernandovandervlist.nl/" class="ahref-text">Archive <span class="path-expands">[web.archive.org]</span></a></span>
 			</p>
 			<hr class="solid" />
 		</section>
