--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 	<title>Contact &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Contact &ndash; fernandovandervlist.nl" />
-	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology, especially internet studies. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		University of Amsterdam (UvA), Media Studies, Humanities, Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
 		App Studies Initiative (ASI), Digital Methods Initiative (DMI), Public Data Lab, 
